--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -76,6 +76,9 @@ p {
 .title {
   margin-bottom: 1rem;
 }
+.totalgrossincome {
+  margin-top: 1rem;
+}
 @media screen and (max-width: 768px) {
   section {
     flex-direction: column;
